<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rebotarm_monitor</name>
  <version>0.2.1</version>
  <description>Passive external monitor for reBotArm hardware state topics.</description>
  <maintainer email="support@example.com">reBotArm Maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rebotarm_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-psutil</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
